--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
     "appService.zipIgnorePattern": [
         "node_modules{,/**}",
         ".vscode{,/**}"
-    ]
+    ],
+    "appService.defaultWebAppToDeploy": "/subscriptions/9263b84c-d0b1-4e04-9d63-084c836497da/microsoft.web/sites/subscriptions/9263b84c-d0b1-4e04-9d63-084c836497da/resourceGroups/Gabtec/providers/Microsoft.Web/sites/devoluciones-web",
+    "appService.deploySubpath": "."
 }
