--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
+    "jspdf-barcode": "0.0.6",
     "moment": "^2.29.3",
     "nanoid": "^3.3.4",
     "react": "^18.0.0",
@@ -18,6 +20,7 @@
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
